Update current focus

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <div class="col-lg-6 col-md-12 order-lg-first">
                         <div class="header-txt">
                            <h1 class="animated" data-animate="fadeInUp" data-delay="1.55">BitcoinMono</h1>
-                           <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">Copypasta cryptocurrency with integrated features from multiple coins</p>
+                           <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">eSports cryptocurrency with integrated features from multiple coins</p>
                            <ul class="btns animated" data-animate="fadeInUp" data-delay="1.75">
                               <li><a href="https://github.com/bitcoinmono/MonoWallet/releases" class="btn">Download</a></li>
                               <li><a href="https://bitcointalk.org/index.php?topic=5108216.0" class="btn btn-alt">Bitcointalk</a></li>
